# SoroTask

./: CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json
.github/workflows/: keeper.yml  pr-size.yml  release.yml  security.yml
contract/: Cargo.toml  README.md  deny.toml
contract/fuzz/: Cargo.toml
contract/fuzz/fuzz_targets/: fuzz_execute.rs  fuzz_register.rs
contract/src/: lib.rs  proptest.rs
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/Zustand/: Store.ts
frontend/app/components/Notification/: Messages.tsx  NotificationIcon.tsx
frontend/app/components/Notification/exampleNotification/: example.ts
keeper/: .env.example  .eslintrc.json  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  POLLING_ENGINE.md  QUICKSTART.md  README.md  RESOLVER_PLUGINS.md  index.js  index.test.js  jest.config.js  mock-rpc.js  package-lock.json  package.json
keeper/__tests__/: account.test.js  executor.test.js  gasMonitor.test.js  integration.test.js  logger.test.js  metrics.test.js  mockRpcServer.test.js  poller.test.js  queue.test.js  registry.test.js  retry.test.js  server.test.js
keeper/coverage/: coverage-summary.json  lcov.info
keeper/coverage/lcov-report/: index.html  index.js.html  jest.config.js.html
keeper/coverage/lcov-report/keeper/: babel.config.js.html  index.html  index.js.html  test-cjs.js.html  test-esm.js.html
keeper/docs/: mock-soroban-rpc.md
keeper/src/: account.js  config.js  dryRun.js  executor.js  gasMonitor.js  logger.js  metrics.js  mockRpcServer.js  poller.js  queue.js  registry.js  retry.js  rpc.js
(+13 files in other folders)
